Fixed overlay visibility

--- a/src/renderer/scss/RecentConnections.scss
+++ b/src/renderer/scss/RecentConnections.scss
@@ -58,5 +58,12 @@ td {
 }
 
 .overlay {
-  z-index: -1;
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  align-items: left;
+  background-color: #ffffffc4;
 }
